# fcl

./: .gitignore  README.md
rcl/: Cargo.toml
rcl/src/: color.rs  grammar.pest  json.rs  lib.rs  nom_test.rs  parse.rs  pest_test.rs
rust/: Cargo.toml
rust/src/: ast.rs  eval.rs  fcl.rs  func.rs  func_mgt.rs  func_reg.rs  grammar.pest  lib.rs  macros.rs  main.rs  parser.rs  runner.rs  types.rs
rust/src/func/: func.rs
rust/src/funcs/: add.rs  mod.rs
rust/src/funcs/calc/: add.rs
