[package]
name = "fcl"
version = "0.1.0"
authors = ["huanwuji"]
edition = "2018"

[dependencies]
nom = "^5.0.0-beta1"
pest = "^2.1.1"
pest_derive = "^2.1.0"
lalrpop-util = "0.17.0"
regex = "0.2.0"
string-interner="0.7.0"
lazy_static = "1.3.0"

[build-dependencies]
lalrpop = "0.17.0"

[profile.dev]
#opt-level = 3
#debug = false
#rpath = false
#lto = false
#debug-assertions = false
#codegen-units = 16
#panic = 'unwind'
#incremental = false
#overflow-checks = false